# MDP

./: .gitignore  README.md
Algorithm/map-descriptors/: arena.txt
Algorithm/src/algorithms/: AStarPathFinder.java  MazeExplorer.java  Path.java  VirtualMap.java
Algorithm/src/datatypes/: Message.java  Movement.java  Orientation.java  SensorPosition.java
Algorithm/src/main/: RobotSystem.java
Algorithm/src/simulator/: Controller.java  UI.java
Algorithm/src/tcpcomm/: PCClient.java
Android/: MDP Android App Message Scheme.docx  ~$P Android App Message Scheme.docx
Android/Android/: build.gradle
Android/Android/app/: build.gradle  (+1 more)
Android/BluetoothChat/: local.properties
Android/mdp_maze/: settings.gradle
Arduino/: README.md
Arduino/main/: CalibrationController.ino  IRController.ino  MotorController.ino  PositionCalibrationController.ino  README.md  SensorController.ino  SharpIR.cpp  SharpIR.h  main.ino  main.ino7109598337261257838.tmp
Object Detection/: CALIB_TRAINING.md  IMPLEMENTATION.md  README.md  YoloOrchestrator.py  main.py
Object Detection/RPi/: img_evnt_handler.py  mjpg_streamer.py
Object Detection/client/: YoloOrchestrator.py  main.py  obj_detect_client.py  yolo_invoke.py
Object Detection/doc_resources/: region_x_y.xlsx
Object Detection/dockerfiles/: Dockerfile
Object Detection/model/: rpi.cfg
Object Detection/server/: streamer.py
Object Detection/training_images/: insert_training_images.txt
Project Plan/: MDP Project Plan.mpp  grp01_project_plan.docx  ~$p01_project_plan.docx
RPi/: CMakeLists.txt  IMAGE_RECOGNITION.md  README.md  REFERENCES.md  main.c  settings.h
RPi/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h
RPi/dockerfiles/image_recog/: Dockerfile
RPi/dockerfiles/rpi/: Dockerfile
RPi/examples/: rpi_connection_example.py
RPi/examples/bluetooth_server/: CMakeLists.txt  bluetooth_server.c
RPi/examples/connection_example/: rpi_connection_example.py
RPi/examples/python_version/: arduinoComm.py  bluetoothComm.py  main.py  pcComm.py
RPi/hub/: CMakeLists.txt  hub.c
RPi/queue/: CMakeLists.txt  queue.c  queue.h
RPi/serial/: CMakeLists.txt  serial.c  serial.h
RPi/src/: CMakeLists.txt  exec.sh  main.c  settings.h
RPi/src/arraylist/: CMakeLists.txt  arraylist.c  arraylist.h
RPi/src/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h
RPi/src/camera/: CMakeLists.txt  camera.c  camera.h
RPi/src/hub/: CMakeLists.txt  hub.c  hub.h
RPi/src/queue/: CMakeLists.txt  queue.c
RPi/src/rpa_queue/: CMakeLists.txt  rpa_queue.c  rpa_queue.h  test.c
RPi/src/serial/: CMakeLists.txt  serial.c  serial.c.save  serial.h
RPi/src/tap/: CMakeLists.txt
RPi/src/tcp/: CMakeLists.txt  tcp.c  tcp.h
RPi/src/tests/: CMakeLists.txt  test_arraylist.c  test_queue.c  test_rpa_queue.c
RPi/tap/: tap.c  tap.h
RPi/tcp/: CMakeLists.txt  tcp.c  tcp.h  test_tcp.py
RPi/tests/: CMakeLists.txt  test_queue.c
(+91 files in other folders)
